tests/pass/PreIncrement.java
package pass;

public class PreIncrement {

    public void preInc(){
        int x = 0;
        ++x;
    }
}
