tests/fail/ExceptionHandling.java
package fail;

import java.lang.Exception;

public class ExceptionHandling {

    public void tryCatchWithNonThrowable(){
        try {

        }catch (String s) {

        }
    }
}
